# cinema

./: config.py  db.sqlite3  pyproject.toml
cinema/: settings.py  urls.py
movies/: models.py
